[tool.poetry]
name = "gridworld"
version = "0.1.0"
description = ""
authors = ["ezhang7423 <ezhang7423@student.palomar.edu>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
gym = "^0.18.3"
gym-minigrid = "^1.0.2"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
